--- a/capsul/sphinxext/resources/layout.html
+++ b/capsul/sphinxext/resources/layout.html
@@ -61,33 +61,33 @@
 {%- if pagename == 'index' %}
 <!-- Banner -->
 <div class="container banner-container">
+
   <div class="row-fluid banner-inner">
     <div class="hidden-phone">
       <div class="span6">
-	    <div class="row-fluid">
-          <div class="offset2 span8"><div id="index_carousel_tn" class="thumbnail">
-	        <div id="examples_carousel" class="carousel slide" data-interval="false">
-		      <ol id="nsap_index_indicators" class="carousel-indicators">
-                %(CAROUSEL_INDICATORS)s
-		      </ol>
-		      <!-- Carousel items -->
-		      <div class="carousel-inner">
-                %(CAROUSEL_IMAGES)s
-		      </div>
-		      <!-- Carousel nav -->
-		      <a class="carousel-control left" href="#examples_carousel" data-slide="prev">&lsaquo;</a>
-		      <a class="carousel-control right" href="#examples_carousel" data-slide="next">&rsaquo;</a>
-	        </div>
-	      </div>
+        <div class="row-fluid">
+          <div class="offset2 span8">
+            <div id="index_carousel_tn" class="thumbnail">
+              <div id="examples_carousel" class="carousel slide" data-interval="false">
+                <ol id="nsap_index_indicators" class="carousel-indicators">
+                  %(CAROUSEL_INDICATORS)s
+                </ol>
+                <div class="carousel-inner">
+                  %(CAROUSEL_IMAGES)s
+                </div>
+                <a class="carousel-control left" href="#examples_carousel" data-slide="prev">&lsaquo;</a>
+                <a class="carousel-control right" href="#examples_carousel" data-slide="next">&rsaquo;</a>
+              </div>
+            </div>
+          </div>
         </div>
-	  </div>
+      </div>
     </div>
-  </div>
+    <div id="nsap_synopsis" class="span6">
+      %(DESCRIPTION)s   
+    </div>
+  </div> 
 
-  <div id="nsap_synopsis" class="span6">
-    %(DESCRIPTION)s   
-  </div>   
-  </div>
 </div>
 {%- endif %}
 
@@ -98,7 +98,7 @@
 {% block content %}
 <div class="content-wrapper">
 
-  {%- if pagename != 'documentation' %}
+  {%- if pagename != 'generated/documentation' %}
     <div class="sphinxsidebar">
       <div class="sphinxsidebarwrapper">
 
@@ -110,16 +110,9 @@
         {%- endif %}
         <p class="citing">
           If you use the software, please do not esitate to 
-          <a &mdash; <a href="https://bioproj.extra.cea.fr/redmine/projects/%(NAME_LOWER)s">
+          <a href="https://bioproj.extra.cea.fr/redmine/projects/%(NAME_LOWER)s">
           Report a Bug</a>.
         </p>
-        <form action="/scripts/nsap-src-message.php" method="post">
-          <textarea rows="4" name="comments" style="width:175px">Enter here your comments</textarea>
-          <center>
-            <input type="submit" value="Send">
-          </center>
-        </form>
-
       <!-- toc tree -->
       {{ toc }}
 
