--- a/capsul/ui/static/execution.html
+++ b/capsul/ui/static/execution.html
@@ -55,6 +55,23 @@
     }
 
     let details_table = document.getElementById('details_table');
+    let div = document.createElement("div");
+    let dis_dis = '';
+    let stp_dis = '';
+    if( report['ongoing'].length )
+        dis_dis = ' disabled="true"';
+    else
+        stp_dis = ' disabled="true"';
+    div.innerHTML = '<button name="Stop" ' + stp_dis
+          + 'onClick="stop_execution(\''
+          + report['execution_id'] + '\')">❌ Stop</button> '
+          + '<button ' + dis_dis + 'onClick="restart_execution(\''
+          + report['execution_id']
+          + '\')">↺ Restart</button> '
+          + '<button ' + dis_dis + 'onClick="dispose_execution(\''
+          + report['execution_id']
+          + '\')">🗑 Dispose</button><br/>'
+    details_table.appendChild(div);
     let tr = document.createElement("tr");
     tr.innerHTML = '<tr><th>Status</th><td>' + status_icon + ' ' + status + '</td><tr>';
     details_table.appendChild(tr);
@@ -115,6 +132,13 @@
                 parent_element.appendChild(details);
                 let e = document.createElement('summary');
                 e.innerText = path[path.length -1];
+                if( report.ongoing.includes(job.uuid) ) {
+                    e.innerText += ' ';
+                    btn = document.createElement('button');
+                    btn.innerText = '❌';
+                    btn.setAttribute('onclick', 'stop_job(\'' + job.uuid + '\')');
+                    e.appendChild(btn);
+                }
                 details.appendChild(e);
                 path_element = document.createElement('ul');
                 path_element.setAttribute('id', id);
@@ -207,5 +231,22 @@
       const execution_report = await web_backend.call('execution_report', engine_label, execution_id);
       set_execution_report(execution_report);
     });
+
+  function stop_execution(execution_id) {
+    console.log('STOP:', execution_id);
+  }
+
+  function restart_execution(execution_id) {
+    console.log('RESTART:', execution_id);
+  }
+
+  function dispose_execution(execution_id) {
+    console.log('DISPOSE:', execution_id);
+  }
+
+  function stop_job(job_id) {
+    console.log('STOP job:', job_id);
+  }
+
   </script>
 </html>
