--- a/capsul/ui/static/engine.html
+++ b/capsul/ui/static/engine.html
@@ -20,7 +20,7 @@
   <h2>Executions</h2>
   <table>
       <thead>
-        <th></th> <!-- selction -->
+        <th></th> <!-- selection -->
         <th>Label</th>
         <th>Status</th>
         <th>Waiting</th>
