--- a/capsul/sphinxext/resources/layout.html
+++ b/capsul/sphinxext/resources/layout.html
@@ -51,7 +51,7 @@
 		    </ul>
 		  </div>
         </li>
-        <li><a href="http://neurospin-wiki.org/">NeuroSpin Wiki</a></li>
+        <li><a href="https://neurospin-wiki.org/">NeuroSpin Wiki</a></li>
       </ul>
     </div> <!-- end navbar -->
     {%- endblock -%}
